[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
array-macro = "2.1.5"
clap = { version = "4.0.10", features = ["derive"] }
derive_more = "0.99.17"
indoc = "1.0.7"
recap = "0.1.2"
serde = { version = "1.0.145", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
assert_cmd = "2.0.4"
